--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,7 +6,7 @@
     <img src="/logo.png" id="logo" alt="Blog logo"/>
     {% endif %}
   </a>
-  <h2><a href="/">{{ site.data.theme.name }}</a>.</h2>
+  <h2><a href="/">{{ site.data.theme.name }}</a></h2>
   <div id="bio">
     <p>Systems Engineer / Infrastructure Architect / Devops Demon</p>
     </p>
