--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -8,7 +8,7 @@
   </a>
   <h2><a href="/">{{ site.data.theme.name }}</a></h2>
   <div id="bio">
-    <p>Systems Engineer / Infrastructure Architect / Devops Demon</p>
+    <p>Systems Engineer • Infrastructure Architect • Devops Demon</p>
     </p>
   </div>
   <div id="social">
