--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,7 +7,7 @@
     {% endif %}
   </a>
   <h2><a href="/">{{ site.data.theme.name }}</a></h2>
-  <h4><a href="/">{{ site.data.theme.email }}</a></h4>
+  <h5><a href="/"mailto:>{{ site.data.theme.email }}</a></h5>
   <div id="bio">
     <p>Systems Engineer  Infrastructure Architect  Devops Demon</p>
     </p>
