--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,8 +6,16 @@
     <img src="/logo.png" id="logo" alt="Blog logo"/>
     {% endif %}
   </a>
-  <h2><a href="/">{{ site.data.theme.name }}</a></h2>
-  <h5><a href="/"mailto:>{{ site.data.theme.email }}</a></h5>
+  <table class="tg">
+    <tr>
+      <th class="tg-yw4l"></th>
+      <h2><a href="/">{{ site.data.theme.name }}</a></h2>
+    </tr>
+    <tr>
+      <td class="tg-yw4l"></td>
+      <h5><a href="/"mailto:>{{ site.data.theme.email }}</a></h5>
+    </tr>
+  </table>
   <div id="bio">
     <p>Systems Engineer  Infrastructure Architect  Devops Demon</p>
     </p>
