--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -13,7 +13,7 @@
     </tr>
     <tr>
       <td class="tg-yw4l"></td>
-      <center><h5><a href="/"mailto:>{{ site.data.theme.email }}</a></h5></center>
+      <center><h5><a href="/">mailto:{{ site.data.theme.email }}</a></h5></center>
     </tr>
   </table>
   <div id="bio">
