--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,11 +9,11 @@
   <table class="tg">
     <tr>
       <th class="tg-yw4l"></th>
-      <center><h2><a href="/">{{ site.data.theme.name }}</a></h2></center>
+      <center><h2><{{ site.data.theme.name }}</h2></center>
     </tr>
     <tr>
       <td class="tg-yw4l"></td>
-      <center><h5><a href="/">mailto:{{ site.data.theme.email }}</a></h5></center>
+      <center><h5><a href="mailto:">{{ site.data.theme.email }}</a></h5></center>
     </tr>
   </table>
   <div id="bio">
