--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -17,7 +17,7 @@
     </tr>
   </table>
   <div id="bio">
-    <p>Systems Engineer  Infrastructure Architect  Devops Demon</p>
+    <p>Systems Wrangler  Infrastructure Architect  Devops Demon</p>
     </p>
   </div>
   <div id="social">
